--- a/about.html
+++ b/about.html
@@ -99,38 +99,67 @@
   </div>
 
   <!-- about section -->
-
-  <section class="about_section layout_padding">
-    <div class="container-fluid">
-      <div class="row">
-        <div class="col-md-10 ml-auto pr-0">
-          <div class="about_container">
-            <div class="row">
-              <div class="col-lg-3 col-md-5">
-                <div class="detail-box">
-                  <div class="heading_container">
-                    <h2>
-                      About Players
-                    </h2>
-                  </div>
-                  <p>
-                    Fc Sporting Pearls was founded in the Year 2020 and officially established in the year 2025,January,3rd. Headquartered in Majengo-Kanamai with the aim and objectives of identifying and nurturing young people with talent in Sporting Activities, improving the living standard of individuals and contributing to the empowerment of individuals,and promoting the development of inclusive communities.
-
-Born from a vision to make a difference, FC Sporting Pearls was created to address the challenges faced by young people in Majengo-Kanamai. We recognized the untapped potential in our youth and the transformative power of sport to inspire, unite, and create opportunities. Since our inception, we have grown into a thriving football academy and community initiative, dedicated to nurturing talent and fostering positive change.
-                  </p>
-                  <hr />
-                  <a href="">
-                    Read More
-                  </a>
+<section class="about_section layout_padding">
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-md-10 ml-auto pr-0">
+        <div class="about_container">
+          <div class="row">
+            <div class="col-lg-8 col-md-10"> <!-- Increased column width for better text flow -->
+              <div class="detail-box">
+                <div class="heading_container">
+                  <h2>About Sporting Pearls</h2>
                 </div>
+
+                <h3 class="mt-4">INTRODUCTION</h3>
+                <p>
+                  Regardless of age and state of health, it is extremely important to keep active. Sports activities play an important role in communities. The main benefits include improving the health and well-being of individuals, contributing to the empowerment of individuals, and promoting the development of inclusive communities. The connection of Sports and Community provide all people with a sense of identity, gratitude, belonging and even joy. People need that self-fulfilment, pride and connection. Having said that, Sports help our communities to connect, communicate and care. Therefore, we firmly believe that the creation and establishment of our Club, Sporting Pearls, touches the vital organs and core values of our community. We aim to be part of a communication that yields solutions, positive feeling, innovation indicator and growth.
+                </p>
+
+                <p>
+                  Sporting Pearls football club is a duly registered non-profit generating organization, incorporated under the companies act 2015 of Kenya. Our objective is to improve the living standard of People of Kenya by identifying and nurturing young people with talent in Sporting Activities. The establishment of Sporting Pearls came at a time when Youths face several hardships – e.g., unemployment reaches ten-fold high, economic collapse, homelessness, Suicides, Drug Abuse, tension and peer pressure, epidemic etc. Majority lack hope and motivation, there is not enough opportunities and facilities out there for these youth and women. These are what define our ambition, to establish tailored approach Sports Youth Club and Academy, anchored on shared dreams of the community.
+                </p>
+
+                <h3>Our Symbolism</h3>
+                <p>
+                  Our logo, the unique butterfly signifies growth stages and process of lifecycle and emphasizes that, it’s never too late to transform ourselves into our original intent. We just believe and work for ourselves. With the passion, commitment and resilience in our DNA we can form a full garden of flowers that would attract more butterflies of opportunities and excellence outcomes.
+                </p>
+
+                <h3>Vision & Mission</h3>
+                <div class="values-list">
+                  <h4>OUR MISSION</h4>
+                  <p>To create a better future for young people by improving their employability and key life skills, through our Sports and education-themed personal development programs.</p>
+
+                  <h4>OUR VISION</h4>
+                  <p>To create a level playing field where every young person has the opportunity to create a better future for themselves.</p>
+
+                  <h4>OUR MOTTO</h4>
+                  <p>° ‘Grit and Believe’ is our passion and potential.</p>
+
+                  <h4>CORE VALUES</h4>
+                  <ul>
+                    <li>° Professionalism</li>
+                    <li>° Respect</li>
+                    <li>° Humility</li>
+                    <li>° Integrity</li>
+                    <li>° Reward through effort</li>
+                    <li>° Fair play</li>
+                  </ul>
+                </div>
+
+                <h3>Our Commitment</h3>
+                <p>
+                  The area of intervention for this project is in Kilifi District, Kanamai-Majengo Village, Kenya. For this dream to live to its logical expectations, we request your support for the establishment of this Sport facility – a youth Sports Academy for both genders of different age categories as specified under the Player’s Contract and Registration Form. Our Vision is to create a modern youth recreational and resource centre that will revive and revitalize this region, complete with modern community facilities including a library, picnic settings, outdoor photography spaces, and all-round sports facilities including a Sport’s Hall. The centre will offer professional trainings, tertiary modular courses (including HIV/AIDS and Drug Abuse education), personal counselling programs, ICT training, entrepreneurship skills and community development programs.
+                </p>
               </div>
             </div>
           </div>
         </div>
       </div>
     </div>
-  </section>
-  <!-- end about section -->
+  </div>
+</section>
+<!-- end about section -->
 
   <!-- info section -->
   <div class="info_section">
