--- a/index.html
+++ b/index.html
@@ -619,8 +619,10 @@ into our original dreams and visions.
                 What Says Our Founders
               </h2>
               <p>
-              We are looking provide an environment where players can express themselves, be
-creative and love the game of football.
+ We believe success comes and will always come from the energy of our
+people. We have a determination to learn and do things better. We depend
+upon developing and deploying best approach to nurture and grow talents
+who will fit in any society.
               </p>
             </div>
             <div class="client_box-container">
