--- a/class.html
+++ b/class.html
@@ -124,13 +124,13 @@ The Sporting Pearls first team is a blend of seasoned professionals and rising s
                 <div class="item">
                   <div class="box">
                     <div class="img-box">
-                      <img src="images/team_14.jpg" alt="">
+                      <img src="images/manley.jpg" alt="">
                       <div class="detail-box">
                         <button>
                           <img src="images/play-icon.png" alt="">
                         </button>
                         <h2>
-                          First Team
+                          Stephen Manley
                         </h2>
                       </div>
                     </div>
@@ -144,13 +144,13 @@ The Sporting Pearls first team is a blend of seasoned professionals and rising s
                 <div class="item">
                   <div class="box">
                     <div class="img-box">
-                      <img src="images/team_12.jpg" alt="">
+                      <img src="images/hashim.jpg" alt="">
                       <div class="detail-box">
                         <button>
                           <img src="images/play-icon.png" alt="">
                         </button>
                         <h2>
-                          Academy
+                          Hashim Hassan
                         </h2>
                       </div>
                     </div>
@@ -164,33 +164,13 @@ The Sporting Pearls first team is a blend of seasoned professionals and rising s
                 <div class="item">
                   <div class="box">
                     <div class="img-box">
-                      <img src="images/team_12.jpg" alt="">
+                      <img src="images/fatuma.jpg" alt="">
                       <div class="detail-box">
                         <button>
                           <img src="images/play-icon.png" alt="">
                         </button>
                         <h2>
-                          Fist Team
-                        </h2>
-                      </div>
-                    </div>
-                    <div class="btn-box">
-                      <a href="">
-                        See More
-                      </a>
-                    </div>
-                  </div>
-                </div>
-                <div class="item">
-                  <div class="box">
-                    <div class="img-box">
-                      <img src="images/team_14.jpg" alt="">
-                      <div class="detail-box">
-                        <button>
-                          <img src="images/play-icon.png" alt="">
-                        </button>
-                        <h2>
-                          Academy
+                          Fatuma Kibwana
                         </h2>
                       </div>
                     </div>
