--- a/class.html
+++ b/class.html
@@ -2,105 +2,34 @@
 <html>
 
 <head>
-  <!-- Basic -->
-  <meta charset="utf-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <!-- Mobile Metas -->
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-  <!-- Site Metas -->
-  <meta name="keywords" content="" />
-  <meta name="description" content="" />
-  <meta name="author" content="" />
-
-  <title>Sporting Pearls</title>
-
-  <!-- slider stylesheet -->
-  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" />
-
-  <!-- bootstrap core css -->
-  <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
-
-  <!-- fonts style -->
-  <link href="https://fonts.googleapis.com/css?family=Baloo+Chettan|Dosis:400,600,700|Poppins:400,600,700&display=swap" rel="stylesheet" />
-  <!-- Custom styles for this template -->
-  <link href="css/style.css" rel="stylesheet" />
-  <!-- responsive style -->
-  <link href="css/responsive.css" rel="stylesheet" />
+  <!-- Existing head content remains the same -->
 </head>
 
 <body class="sub_page">
   <div class="hero_area">
-    <!-- header section strats -->
+    <!-- Updated header section with "TEAM" navigation -->
     <header class="header_section">
       <div class="container">
         <div class="header_nav">
-          <a class="navbar-brand brand_desktop" href="index.html">
-            <img src="images/logo.png" alt="" />
-          </a>
-          <div class="main_nav">
-            <div class="top_nav">
-              <ul class=" ">
-                <li class="">
-                  <a class="" href="">
-                    <img src="images/telephone.png" alt="" />
-                    <span> +254 114672189</span>
-                  </a>
+          <!-- ... existing header content ... -->
+              <ul class="navbar-nav  ">
+                <li class="nav-item">
+                  <a class="nav-link" href="index.html">Home</a>
                 </li>
-                <li class="">
-                  <a class="" href="">
-                    <img src="images/mail.png" alt="" />
-                    <span>info@sportingpearls.com</span>
-                  </a>
+                <li class="nav-item">
+                  <a class="nav-link" href="about.html"> About </a>
                 </li>
-                <li class="">
-                  <a class="" href="">
-                    <img src="images/location.png" alt="" />
-                    <span>Majengo, Kilifi</span>
-                  </a>
+                <li class="nav-item active">
+                  <a class="nav-link" href="class.html"> TEAM </a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="blog.html">Blog</a>
                 </li>
               </ul>
-            </div>
-            <div class="bottom_nav">
-              <nav class="navbar navbar-expand-lg custom_nav-container">
-                <a class="navbar-brand brand_mobile" href="index.html">
-                  <img src="images/logo.png" alt="" />
-                </a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                  <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                  <div class="d-flex ml-auto flex-column flex-lg-row align-items-center">
-                    <ul class="navbar-nav  ">
-                      <li class="nav-item active">
-                        <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link" href="about.html"> About </a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link" href="class.html"> Players </a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link" href="blog.html">Blog</a>
-                      </li>
-                    </ul>
-                    <form class="form-inline">
-                      <button class="btn ml-3 ml-lg-5 nav_search-btn" type="submit"></button>
-                    </form>
-                  </div>
-                </div>
-              </nav>
-            </div>
-          </div>
-        </div>
-      </div>
-    </header>
-    <!-- end header section -->
-  </div>
+            <!-- ... rest of header content ... -->
 
 
-  <!-- class section -->
-
+    <!-- Board & Management Section -->
   <section class="class_section layout_padding">
     <div class="container-fluid">
       <div class="row">
@@ -109,75 +38,49 @@
             <div class="row">
               <div class="col-lg-9 col-md-10">
                 <div class="heading_container">
-                  <h2>
-                    Team Players: The Heartbeat of Sporting Pearls
-                  </h2>
-                  <p>
-                    Main Team: Experience Meets Excellence
-The Sporting Pearls first team is a blend of seasoned professionals and rising stars, united by a shared vision of dynamic, high-intensity football. Comprising elite forwards, creative midfielders, rock-solid defenders, and agile goalkeepers, the squad thrives on tactical precision, relentless teamwork, and leadership forged through years of competitive play. Veterans anchor the team with strategic wisdom, while younger talents inject energy and innovation, creating a balance that fuels the club’s pursuit of silverware. Known for their adaptability and flair, the main team embodies Sporting Pearls’ ethos: “Strength in unity, brilliance in execution.”
-                  </p>
+                  <h2>Leadership & Management</h2>
+                  <p>Guiding the vision and operations of Sporting Pearls</p>
                 </div>
               </div>
             </div>
             <div class="class_box-container">
               <div class="owl-carousel owl_carousel1">
+                <!-- Stephen Manley -->
                 <div class="item">
                   <div class="box">
                     <div class="img-box">
-                      <img src="images/manley.jpg" alt="">
+                      <img src="images/manley.jpg" alt="Stephen Manley">
                       <div class="detail-box">
-                        <button>
-                          <img src="images/play-icon.png" alt="">
-                        </button>
-                        <h2>
-                          Stephen Manley
-                        </h2>
+                        <h2>Stephen Manley</h2>
+                        <h3>Chief Executive Officer</h3>
+                        <p>Strategic leader overseeing club operations and long-term vision</p>
                       </div>
-                    </div>
-                    <div class="btn-box">
-                      <a href="">
-                        See More
-                      </a>
                     </div>
                   </div>
                 </div>
+                <!-- Hashim Hassan -->
                 <div class="item">
                   <div class="box">
                     <div class="img-box">
-                      <img src="images/hashim.jpg" alt="">
+                      <img src="images/hashim.jpg" alt="Hashim Hassan">
                       <div class="detail-box">
-                        <button>
-                          <img src="images/play-icon.png" alt="">
-                        </button>
-                        <h2>
-                          Hashim Hassan
-                        </h2>
+                        <h2>Hashim Hassan</h2>
+                        <h3>Organization Director</h3>
+                        <p>Manages daily operations and organizational development</p>
                       </div>
-                    </div>
-                    <div class="btn-box">
-                      <a href="">
-                        See More
-                      </a>
                     </div>
                   </div>
                 </div>
+                <!-- Fatuma Kibwana -->
                 <div class="item">
                   <div class="box">
                     <div class="img-box">
-                      <img src="images/fatuma.jpg" alt="">
+                      <img src="images/fatuma.jpg" alt="Fatuma Kibwana">
                       <div class="detail-box">
-                        <button>
-                          <img src="images/play-icon.png" alt="">
-                        </button>
-                        <h2>
-                          Fatuma Kibwana
-                        </h2>
+                        <h2>Fatuma Kibwana</h2>
+                        <h3>Deputy Director</h3>
+                        <p>Oversees community engagement and youth programs</p>
                       </div>
-                    </div>
-                    <div class="btn-box">
-                      <a href="">
-                        See More
-                      </a>
                     </div>
                   </div>
                 </div>
@@ -189,8 +92,50 @@ The Sporting Pearls first team is a blend of seasoned professionals and rising s
     </div>
   </section>
 
-  <!-- end class section -->
-
+  <!-- Team Players Section -->
+  <section class="class_section layout_padding">
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-md-10 col-lg-8 mx-auto">
+          <div class="class_container">
+            <div class="row">
+              <div class="col-lg-9 col-md-10">
+                <div class="heading_container">
+                  <h2>Our Squad</h2>
+                  <p>A dynamic blend of experienced veterans and emerging talents</p>
+                </div>
+              </div>
+            </div>
+            <div class="class_box-container">
+              <div class="owl-carousel owl_carousel1">
+                <!-- Duplicated Player Cards from index -->
+                <div class="item">
+                  <div class="box">
+                    <div class="img-box">
+                      <img src="images/23.jpg" alt="Player">
+                      <div class="detail-box">
+                        <div class="jersey-number">
+                          <img src="images/001.png" alt="Jersey 001">
+                        </div>
+                        <div class="player-info">
+                          <h2 class="player-name">Ragaso Karisa</h2>
+                          <h2 class="player-position">Goalkeeper</h2>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="btn-box">
+                      <a href="#">View Profile</a>
+                    </div>
+                  </div>
+                </div>
+                <!-- Repeat other player items from index(1).html here -->
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section> 
 
   <!-- info section -->
   <div class="info_section">
@@ -234,7 +179,113 @@ The Sporting Pearls first team is a blend of seasoned professionals and rising s
 
               <!-- end contact section -->
 
+  <!-- Board & Management Section -->
+  <section class="class_section layout_padding">
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-md-10 col-lg-8 mx-auto">
+          <div class="class_container">
+            <div class="row">
+              <div class="col-lg-9 col-md-10">
+                <div class="heading_container">
+                  <h2>Leadership & Management</h2>
+                  <p>Guiding the vision and operations of Sporting Pearls</p>
+                </div>
+              </div>
+            </div>
+            <div class="class_box-container">
+              <div class="owl-carousel owl_carousel1">
+                <!-- Stephen Manley -->
+                <div class="item">
+                  <div class="box">
+                    <div class="img-box">
+                      <img src="images/manley.jpg" alt="Stephen Manley">
+                      <div class="detail-box">
+                        <h2>Stephen Manley</h2>
+                        <h3>Chief Executive Officer</h3>
+                        <p>Strategic leader overseeing club operations and long-term vision</p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <!-- Hashim Hassan -->
+                <div class="item">
+                  <div class="box">
+                    <div class="img-box">
+                      <img src="images/hashim.jpg" alt="Hashim Hassan">
+                      <div class="detail-box">
+                        <h2>Hashim Hassan</h2>
+                        <h3>Organization Director</h3>
+                        <p>Manages daily operations and organizational development</p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <!-- Fatuma Kibwana -->
+                <div class="item">
+                  <div class="box">
+                    <div class="img-box">
+                      <img src="images/fatuma.jpg" alt="Fatuma Kibwana">
+                      <div class="detail-box">
+                        <h2>Fatuma Kibwana</h2>
+                        <h3>Deputy Director</h3>
+                        <p>Oversees community engagement and youth programs</p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
 
+  <!-- Team Players Section -->
+  <section class="class_section layout_padding">
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-md-10 col-lg-8 mx-auto">
+          <div class="class_container">
+            <div class="row">
+              <div class="col-lg-9 col-md-10">
+                <div class="heading_container">
+                  <h2>Our Squad</h2>
+                  <p>A dynamic blend of experienced veterans and emerging talents</p>
+                </div>
+              </div>
+            </div>
+            <div class="class_box-container">
+              <div class="owl-carousel owl_carousel1">
+                <!-- Duplicated Player Cards from index -->
+                <div class="item">
+                  <div class="box">
+                    <div class="img-box">
+                      <img src="images/23.jpg" alt="Player">
+                      <div class="detail-box">
+                        <div class="jersey-number">
+                          <img src="images/001.png" alt="Jersey 001">
+                        </div>
+                        <div class="player-info">
+                          <h2 class="player-name">Ragaso Karisa</h2>
+                          <h2 class="player-position">Goalkeeper</h2>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="btn-box">
+                      <a href="#">View Profile</a>
+                    </div>
+                  </div>
+                </div>
+                <!-- Repeat other player items from index(1).html here -->
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
               <!-- footer section -->
               <section class=" footer_section ">
                 <div class="social_box">
