--- a/blog.html
+++ b/blog.html
@@ -126,15 +126,21 @@
                 <div class="detail-box">
                   <div class="img_date">
                     <h6>
-                      17 <br>
-                      Feb
+                      1<br>
+              
                     </h6>
                   </div>
                   <h3>
-                    Stephen Manley
+                     SPORTING PEARLS THROUGH THE LENSE
                   </h3>
                   <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+                   Connecting our communities through sports is critical to the health and mental
+wellbeing of our society by providing a sense of identity, gratitude, belonging
+and even joy. Sporting Pearls aim to help communities come together with
+purpose, communicate and care. We believe in fair competition, in integrity
+and in shaping critical thinking and better governance. Sporting Pearls has
+signalled the sense of approach aimed to bring people together as part of
+something bigger evoking a sense of pride and community strength.
                   </p>
                   <a href="">
                     Read More
@@ -154,15 +160,34 @@
                 <div class="detail-box">
                   <div class="img_date">
                     <h6>
-                      17 <br>
-                      Jun
+                      2 <br>
+                      
                     </h6>
                   </div>
                   <h3>
-                    Boxer Joniya Daro
+                   OUR IDENTITY
                   </h3>
                   <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+                    Sporting Pearls style of play combined attacking flair with defensive
+organization. Under Head Coach Dr. Stephen Manley, who joined the Pearls
+Family in midseason of 2024, adopted a fearless approach often pressing high,
+third-man combination model and countering quickly__ this the club believe
+will be ultimate success when fully emphasized.
+Our style of play (mixed with formidable formation ‘4-3-3 &amp; 3-4-2-1’ mould
+into our DNA and the result of the way we coach and train every individual
+and the team as groups, as well as the freedom we allow for the creativity to
+grow and thrive) is very much on attacking, possession-based one with
+emphasis on entertainment. Why entertainment? As Sporting Pearls, we
+believe there is no point in playing youth soccer unless there is entertainment
+all around. We want our players to be entertained as individuals. We want
+teammates to be entertained by each other. We want parents and fans in the
+community to be entertained by our playing style and culture and even our
+opponents to be entertained. Because we want to play good football and win
+matches with dignity, honesty and fair-play and above all with Fun.
+One improved player makes the whole team better. This is Peals philosophy
+and we shall continuously improve and advance each and every player’s skill
+and ability into a shining butterfly wings. Because we are ‘The Butterflies’. We
+grow, we develop, we nurture and we fly higher than expectations.
                   </p>
                   <a href="">
                     Read More
