--- a/class.html
+++ b/class.html
@@ -110,7 +110,7 @@
               <div class="col-lg-9 col-md-10">
                 <div class="heading_container">
                   <h2>
-                    Team Players: The Heartbeat of Sporting Pearls
+                    BOARD MEMBERS: The Heartbeat of Sporting Pearls
                   </h2>
                   <p>
                     Main Team: Experience Meets Excellence
