--- a/index.html
+++ b/index.html
@@ -507,6 +507,25 @@ effort and fair play.
       </div>
     </div>
   </div>
+  <div class="item">
+    <div class="box">
+      <div class="img-box">
+        <img src="images/onesmus.jpg" alt="Player">
+        <div class="detail-box">
+          <div class="jersey-number">
+            <img src="images/001.png" alt="Jersey 001">
+          </div>
+          <div class="player-info">
+            <h2 class="player-name">Onesmus Mbaru</h2>
+            <h2 class="player-position">#12 Defender</h2>
+          </div>
+        </div>
+      </div>
+      <div class="btn-box">
+        <a href="#">View Profile</a>
+      </div>
+    </div>
+  </div>
   <!-- Repeat above block 39 more times -->
 </div>
               </div>
