--- a/index.html
+++ b/index.html
@@ -396,14 +396,14 @@ effort and fair play.
   <div class="item">
   <div class="box">
     <div class="img-box">
-      <img src="images/23.jpg" alt="Player">
+      <img src="images/kadzungu.jpg" alt="Player">
       <div class="detail-box">
         <div class="jersey-number">
           <img src="images/040.png" alt="Jersey 040">
         </div>
         <div class="player-info">
-          <h2 class="player-name">David Nyamawangi</h2>
-          <h2 class="player-position">Midfielder</h2>
+          <h2 class="player-name">David Kadzungu</h2>
+          <h2 class="player-position">#12 Midfielder</h2>
         </div>
       </div>
     </div>
