--- a/index.html
+++ b/index.html
@@ -260,6 +260,25 @@ effort and fair play.
       </div>
     </div>
   </div>
+ <div class="item">
+    <div class="box">
+      <div class="img-box">
+        <img src="images/23.jpg" alt="Player">
+        <div class="detail-box">
+          <div class="jersey-number">
+            <img src="images/001.png" alt="Jersey 001">
+          </div>
+          <div class="player-info">
+            <h2 class="player-name">Juma Munga</h2>
+            <h2 class="player-position">#35 Goalkeeper</h2>
+          </div>
+        </div>
+      </div>
+      <div class="btn-box">
+        <a href="#">View Profile</a>
+      </div>
+    </div>
+  </div>
   <div class="item">
     <div class="box">
       <div class="img-box">
@@ -412,6 +431,25 @@ effort and fair play.
     </div>
   </div>
 </div>
+<div class="item">
+    <div class="box">
+      <div class="img-box">
+        <img src="images/37.jpg" alt="Player">
+        <div class="detail-box">
+          <div class="jersey-number">
+            <img src="images/001.png" alt="Jersey 001">
+          </div>
+          <div class="player-info">
+            <h2 class="player-name">Gift Mugao</h2>
+            <h2 class="player-position">#28 Midfielder</h2>
+          </div>
+        </div>
+      </div>
+      <div class="btn-box">
+        <a href="#">View Profile</a>
+      </div>
+    </div>
+  </div>
    <div class="item">
     <div class="box">
       <div class="img-box">
@@ -442,6 +480,25 @@ effort and fair play.
           <div class="player-info">
             <h2 class="player-name">David Mugasia</h2>
             <h2 class="player-position">Midfielder</h2>
+          </div>
+        </div>
+      </div>
+      <div class="btn-box">
+        <a href="#">View Profile</a>
+      </div>
+    </div>
+  </div>
+  <div class="item">
+    <div class="box">
+      <div class="img-box">
+        <img src="images/37.jpg" alt="Player">
+        <div class="detail-box">
+          <div class="jersey-number">
+            <img src="images/001.png" alt="Jersey 001">
+          </div>
+          <div class="player-info">
+            <h2 class="player-name">Hassan Juma</h2>
+            <h2 class="player-position">#30 Midfielder</h2>
           </div>
         </div>
       </div>
