--- a/class.html
+++ b/class.html
@@ -78,7 +78,7 @@
                         <a class="nav-link" href="about.html"> About </a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="class.html"> Players </a>
+                        <a class="nav-link" href="class.html"> Team </a>
                       </li>
                       <li class="nav-item">
                         <a class="nav-link" href="blog.html">Blog</a>
