--- a/index.html
+++ b/index.html
@@ -263,14 +263,33 @@ effort and fair play.
  <div class="item">
     <div class="box">
       <div class="img-box">
-        <img src="images/23.jpg" alt="Player">
+        <img src="images/hosty.jpg" alt="Player">
+        <div class="detail-box">
+          <div class="jersey-number">
+            <img src="images/001.png" alt="Jersey 001">
+          </div>
+          <div class="player-info">
+            <h2 class="player-name">Hosty Mtei</h2>
+            <h2 class="player-position">Goalkeeper</h2>
+          </div>
+        </div>
+      </div>
+      <div class="btn-box">
+        <a href="#">View Profile</a>
+      </div>
+    </div>
+  </div>
+ <div class="item">
+    <div class="box">
+      <div class="img-box">
+        <img src="images/munga.jpg" alt="Player">
         <div class="detail-box">
           <div class="jersey-number">
             <img src="images/001.png" alt="Jersey 001">
           </div>
           <div class="player-info">
             <h2 class="player-name">Juma Munga</h2>
-            <h2 class="player-position">#35 Goalkeeper</h2>
+            <h2 class="player-position">Goalkeeper</h2>
           </div>
         </div>
       </div>
@@ -412,7 +431,26 @@ effort and fair play.
     </div>
   </div>
 </div>
-  <div class="item">
+<div class="item">
+  <div class="box">
+    <div class="img-box">
+      <img src="images/20b.jpg" alt="Player">
+      <div class="detail-box">
+        <div class="jersey-number">
+          <img src="images/040.png" alt="Jersey 040">
+        </div>
+        <div class="player-info">
+          <h2 class="player-name">David Nyamwage</h2>
+          <h2 class="player-position">Midfielder</h2>
+        </div>
+      </div>
+    </div>
+    <div class="btn-box">
+      <a href="#">View Profile</a>
+    </div>
+  </div>
+</div>
+<div class="item">
   <div class="box">
     <div class="img-box">
       <img src="images/kadzungu.jpg" alt="Player">
@@ -422,7 +460,7 @@ effort and fair play.
         </div>
         <div class="player-info">
           <h2 class="player-name">David Kadzungu</h2>
-          <h2 class="player-position">#18 Midfielder</h2>
+          <h2 class="player-position">Midfielder</h2>
         </div>
       </div>
     </div>
@@ -434,14 +472,14 @@ effort and fair play.
 <div class="item">
     <div class="box">
       <div class="img-box">
-        <img src="images/37.jpg" alt="Player">
+        <img src="images/gift.jpg" alt="Player">
         <div class="detail-box">
           <div class="jersey-number">
             <img src="images/001.png" alt="Jersey 001">
           </div>
           <div class="player-info">
             <h2 class="player-name">Gift Mugao</h2>
-            <h2 class="player-position">#28 Midfielder</h2>
+            <h2 class="player-position">Midfielder</h2>
           </div>
         </div>
       </div>
@@ -453,7 +491,7 @@ effort and fair play.
    <div class="item">
     <div class="box">
       <div class="img-box">
-        <img src="images/23.jpg" alt="Player">
+        <img src="images/wolcott.jpg" alt="Player">
         <div class="detail-box">
           <div class="jersey-number">
             <img src="images/001.png" alt="Jersey 001">
@@ -498,7 +536,7 @@ effort and fair play.
           </div>
           <div class="player-info">
             <h2 class="player-name">Hassan Juma</h2>
-            <h2 class="player-position">#30 Midfielder</h2>
+            <h2 class="player-position">Midfielder</h2>
           </div>
         </div>
       </div>
@@ -510,14 +548,14 @@ effort and fair play.
   <div class="item">
     <div class="box">
       <div class="img-box">
-        <img src="images/21b.jpg" alt="Player">
+        <img src="images/fakki.jpg" alt="Player">
         <div class="detail-box">
           <div class="jersey-number">
             <img src="images/001.png" alt="Jersey 001">
           </div>
           <div class="player-info">
-            <h2 class="player-name">Faki Kombe</h2>
-            <h2 class="player-position">Midfeilder</h2>
+            <h2 class="player-name">Fakki Kombe</h2>
+            <h2 class="player-position">Forward</h2>
           </div>
         </div>
       </div>
@@ -548,6 +586,25 @@ effort and fair play.
   <div class="item">
     <div class="box">
       <div class="img-box">
+        <img src="images/fondo.jpg" alt="Player">
+        <div class="detail-box">
+          <div class="jersey-number">
+            <img src="images/001.png" alt="Jersey 001">
+          </div>
+          <div class="player-info">
+            <h2 class="player-name">Abu Fondo</h2>
+            <h2 class="player-position">Forward</h2>
+          </div>
+        </div>
+      </div>
+      <div class="btn-box">
+        <a href="#">View Profile</a>
+      </div>
+    </div>
+  </div>           
+  <div class="item">
+    <div class="box">
+      <div class="img-box">
         <img src="images/35.jpg" alt="Player">
         <div class="detail-box">
           <div class="jersey-number">
@@ -574,7 +631,7 @@ effort and fair play.
           </div>
           <div class="player-info">
             <h2 class="player-name">Onesmus Mbaru</h2>
-            <h2 class="player-position">#12 Defender</h2>
+            <h2 class="player-position">Defender</h2>
           </div>
         </div>
       </div>
