--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@ effort and fair play.
  <div class="item">
     <div class="box">
       <div class="img-box">
-        <img src="images/munga.jpg" alt="Player">
+        <img src="images/Munga.jpg" alt="Player">
         <div class="detail-box">
           <div class="jersey-number">
             <img src="images/001.png" alt="Jersey 001">
@@ -358,7 +358,7 @@ effort and fair play.
    <div class="item">
     <div class="box">
       <div class="img-box">
-        <img src="images/23.jpg" alt="Player">
+        <img src="images/omar.jpg" alt="Player">
         <div class="detail-box">
           <div class="jersey-number">
             <img src="images/001.png" alt="Jersey 001">
